overflowing on big screens resolved

--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Mate+SC&family=Odibee+Sans&family=Roboto+Condensed:wght@300&display=swap');
 
 body{
-    margin: 0;
+    max-width: 1536px;
+    margin: auto;
     background-image: url('../images/bg.png');
     background-repeat: no-repeat;
     background-size: 100% 750px;
